Remove global lifecycle patching